Aggiunta immagine hover

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
     <div class="container">
 
+      <!-- Prodotto 1  -->
       <div class="product">
-
         <section class="product-top">
           <img src="./img/1.webp" alt="prodotto 1">
+          <img class="img-hover" src="./img/1b.webp" alt="">
           <div class="discount"><span>-50%</span></div>
           <div class="eco"><span>Sostenibilità</span></div>
           <div class="heart">&hearts;</div>
@@ -28,8 +29,8 @@
           <span class="price">14,99 &#8364;</span>
           <span class="old-price">29,99 &#8364;</span>
         </section>
-
       </div>
+      <!-- /Prodotto 1  -->
 
     </div>
 
