Aggiunta prodotti rimanenti e modifica etichette (%sconto e sostenibilità) con classe label

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <section class="product-top">
           <img src="./img/1.webp" alt="prodotto 1">
           <img class="img-hover" src="./img/1b.webp" alt="">
-          <div class="discount"><span>-50%</span></div>
-          <div class="eco"><span>Sostenibilità</span></div>
-          <div class="heart">&hearts;</div>
+          <p class="label">
+            <span class="discount">-50%</span>
+            <span class="eco">Sostenibilità</span>
+          </p>
+          <span class="heart">&hearts;</span>
         </section>
 
         <section class="product-bottom">
@@ -31,6 +33,105 @@
         </section>
       </div>
       <!-- /Prodotto 1  -->
+
+      <!-- Prodotto 2  -->
+      <div class="product">
+        <section class="product-top">
+          <img src="./img/2.webp" alt="prodotto 2">
+          <img class="img-hover" src="./img/2b.webp" alt="">
+          <p class="label">
+            <span class="discount">-30%</span>
+          </p>
+          <span class="heart">&hearts;</span>
+        </section>
+
+        <section class="product-bottom">
+          <span>Guess</span>
+          <p>roses tee</p>
+          <span class="price">14,99 &#8364;</span>
+          <span class="old-price">29,99 &#8364;</span>
+        </section>
+      </div>
+      <!-- /Prodotto 2  -->
+
+      <!-- Prodotto 3  -->
+      <div class="product">
+        <section class="product-top">
+          <img src="./img/3.webp" alt="prodotto 3">
+          <img class="img-hover" src="./img/3b.webp" alt="">
+          <p class="label">
+            <span class="discount">-30%</span>
+          </p>
+          <span class="heart">&hearts;</span>
+        </section>
+
+        <section class="product-bottom">
+          <span>Come Zucchero Filato</span>
+          <p>voglia di colori pastello</p>
+          <span class="price">129,99 &#8364;</span>
+        </section>
+      </div>
+      <!-- /Prodotto 3  -->
+
+      <!-- Prodotto 4  -->
+      <div class="product">
+        <section class="product-top">
+          <img src="./img/4.webp" alt="prodotto 4">
+          <img class="img-hover" src="./img/4b.webp" alt="">
+          <p class="label">
+            <span class="discount">-50%</span>
+            <span class="eco">Sostenibilità</span>
+          </p>
+          <span class="heart">&hearts;</span>
+        </section>
+
+        <section class="product-bottom">
+          <span>Levi's</span>
+          <p>tee unisex</p>
+          <span class="price">14,99 &#8364;</span>
+          <span class="old-price">29,99 &#8364;</span>
+        </section>
+      </div>
+      <!-- /Prodotto 4  -->
+
+      <!-- Prodotto 5  -->
+      <div class="product">
+        <section class="product-top">
+          <img src="./img/5.webp" alt="prodotto 5">
+          <img class="img-hover" src="./img/5b.webp" alt="">
+          <p class="label">
+            <!-- vuoto  -->
+          </p>
+          <span class="heart">&hearts;</span>
+        </section>
+
+        <section class="product-bottom">
+          <span>Maya Deluxe</span>
+          <p>stripe bodice</p>
+          <span class="price">99,99 &#8364;</span>
+        </section>
+      </div>
+      <!-- /Prodotto 5  -->
+
+      <!-- Prodotto 6  -->
+      <div class="product">
+        <section class="product-top">
+          <img src="./img/6.webp" alt="prodotto 6">
+          <img class="img-hover" src="./img/6b.webp" alt="">
+            <p class="label">
+              <span class="eco">Sostenibilità</span>
+            </p>
+          <span class="heart">&hearts;</span>
+        </section>
+
+        <section class="product-bottom">
+          <span>Esprit</span>
+          <p>maglione - black</p>
+          <span class="price">29,99 &#8364;</span>
+        </section>
+      </div>
+      <!-- /Prodotto 6  -->
+
 
     </div>
 
