--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
   <main>
 
-    <div class="container">
+    <div class="container clearfix">
 
       <!-- Prodotto 1  -->
       <div class="product">
         <section class="product-top">
           <img src="./img/1.webp" alt="prodotto 1">
           <img class="img-hover" src="./img/1b.webp" alt="">
+          <!-- Invece di p label potevo mettere un div label -->
           <p class="label">
+            <!-- Accento sulla a e percentuale dovevo usare i codici  -->
             <span class="discount">-50%</span>
             <span class="eco">Sostenibilità</span>
           </p>
@@ -27,8 +29,10 @@
 
         <section class="product-bottom">
           <span>Levi's</span>
+          <!-- Invece del p dovevo usare un h3  -->
           <p>relaxed fit tee unisex</p>
           <span class="price">14,99 &#8364;</span>
+          <!-- Per far si che il contenuto sia sbarrato invece di usare line-trought su css uso del al posto di span  -->
           <span class="old-price">29,99 &#8364;</span>
         </section>
       </div>
